branch_11: Interim commit.

--- a/src/controlflowgraph/analysis/Makefile.am
+++ b/src/controlflowgraph/analysis/Makefile.am
@@ -22,7 +22,10 @@ libanalysis_a_SOURCES = \
 	RuleDFSBase.cpp RuleDFSBase.h \
 	RuleReachability.cpp RuleReachability.h
 	
-
+# Propagate any AM_*FLAGS to the per-target flags.
+# We need to do this because per the Automake manual, "In compilations with per-target flags,
+# the ordinary ‘AM_’ form of the flags variable is not automatically included in the compilation
+# (however, the user form of the variable is included)."
 libanalysis_a_CPPFLAGS = $(AM_CPPFLAGS)
 libanalysis_a_CFLAGS = $(AM_CFLAGS)
 libanalysis_a_CXXFLAGS = $(AM_CXXFLAGS)
