--- a/src/libexttools/Makefile.am
+++ b/src/libexttools/Makefile.am
@@ -21,6 +21,10 @@ libexttools_a_SOURCES = ToolBase.cpp ToolBase.h \
     ToolDot.cpp ToolDot.h \
     VersionNumber.cpp VersionNumber.h
 
+# Propagate any AM_*FLAGS to the per-target flags.
+# We need to do this because per the Automake manual, "In compilations with per-target flags,
+# the ordinary ‘AM_’ form of the flags variable is not automatically included in the compilation
+# (however, the user form of the variable is included)."
 libexttools_a_CPPFLAGS = $(AM_CPPFLAGS)
 libexttools_a_CFLAGS = $(AM_CFLAGS)
 libexttools_a_CXXFLAGS = $(AM_CXXFLAGS)
