--- a/src/controlflowgraph/visitors/Makefile.am
+++ b/src/controlflowgraph/visitors/Makefile.am
@@ -24,6 +24,10 @@ BackEdgeFixupVisitor.cpp BackEdgeFixupVisitor.h \
 	ImprovedDFSVisitorBase.h \
 	ReachabilityVisitor.cpp ReachabilityVisitor.h
 
+# Propagate any AM_*FLAGS to the per-target flags.
+# We need to do this because per the Automake manual, "In compilations with per-target flags,
+# the ordinary ‘AM_’ form of the flags variable is not automatically included in the compilation
+# (however, the user form of the variable is included)."
 libvisitors_a_CPPFLAGS = $(AM_CPPFLAGS)
 libvisitors_a_CFLAGS = $(AM_CFLAGS)
 libvisitors_a_CXXFLAGS = $(AM_CXXFLAGS)
