branch_11: Doc updates.

--- a/Makefile.am
+++ b/Makefile.am
@@ -74,4 +74,7 @@ FORCE:
 
 # Add the doxygen-doc files to the MOSTLYCLEANFILES variable so they can be cleaned.
 # Per <http://www.gnu.org/software/autoconf-archive/ax_prog_doxygen.html#ax_prog_doxygen>
-MOSTLYCLEANFILES = $(DX_CLEANFILES)
+MOSTLYCLEANFILES = $(DX_CLEANFILES) $(AX_INSTALL_FILES_CLEANFILES)
+
+# Target for generating a list of the files that will be installed.
+install-files: $(top_builddir)/install_files
