--- a/configure.ac
+++ b/configure.ac
@@ -218,7 +218,7 @@ AX_BOOST_FILESYSTEM
 #BOOST_FILESYSTEM
 
 
-AS_ECHO(["After AX_BOOST $BOOST_LDFLAGS"])
+AS_ECHO(["BOOST_LDFLAGS=$BOOST_LDFLAGS"])
 AC_SUBST([BOOST_RPATH], [`echo -n "$BOOST_LDFLAGS" | sed 's/-L//'`])
 AS_ECHO(["BOOST_RPATH=$BOOST_RPATH"])
 
