branch_12: Pulled branch from branch_9 instead of trunk apparently.  Synced with trunk.

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 # configure.ac for CoFlo
 #
-# Copyright 2011 Gary R. Van Sickle (grvs@users.sourceforge.net).
+# Copyright 2011, 2012 Gary R. Van Sickle (grvs@users.sourceforge.net).
 #
 # This file is part of CoFlo.
 #
@@ -20,14 +20,20 @@
 # Require the newest autoconf which is commonly deployed on our targeted platforms.
 # Current defaults are:
 # - Ubuntu:
-#    autoconf 2.67
+#    autoconf 2.68
+#    automake 1.11.1
 # - Cygwin:
 #    autoconf 2.68
 #    automake 1.11.1
 # - Fedora:
 #    autoconf 2.68
 #    automake 1.11.1
-AC_PREREQ([2.67])
+AC_PREREQ([2.68])
+# Require the newest libtool in common between all platforms we currently anticipate CoFlo will be developed on
+# ("developed on", not "distributed for": libtool isn't necessary to build distributions).
+# Both Cygwin and Ubuntu ship libtool 2.4 as of this writing.
+LT_PREREQ([2.4])
+
 
 # Define an M4 macro which will get the working copy's current version info via "svnversion".
 #m4_include([m4/coflo_source_control_version.m4])
@@ -45,7 +51,7 @@ AC_PREREQ([2.67])
 # the "AC_SUBST([CONFIG_STATUS_DEPENDENCIES]..." line below, and the top-level Makefile.am for the other components
 # of this mechanism.
 #AC_INIT([CoFlo], , [BUG-REPORT-ADDRESS],,[http://coflo.sourceforge.net/])
-AC_INIT([CoFlo], [0.0.1], [BUG-REPORT-ADDRESS],,[http://coflo.sourceforge.net/])
+AC_INIT([CoFlo], [0.0.3], [BUG-REPORT-ADDRESS],,[http://coflo.sourceforge.net/])
 
 AC_CONFIG_SRCDIR([src/main.cpp])
 AC_CONFIG_HEADERS([config.h])
@@ -54,12 +60,19 @@ AC_COPYRIGHT([Copyright (C) 2011 Gary R. Van Sickle])
 # Use the auxilliary build tools (e.g. install-sh, config.sub, etc.) in ./build-aux.
 AC_CONFIG_AUX_DIR([build-aux])
 
+###
+### AC_REQUIRE some helper scripts etc.  This both ensures they exist and causes them to be distributed.
+###
 # Require our source control version checking script. 
 #AC_REQUIRE_AUX_FILE([coflo_version_control_info])
 # Require our move-if-file-contents-differ script.
 #AC_REQUIRE_AUX_FILE([move-if-change])
+#AC_REQUIRE_AUX_FILE([config.guess])
 
-# Additional Autoconf macros are in m4/.
+# If/when we need to use any AC_REPLACE_FUNCS, we'll put them in ./portable. 
+#AC_CONFIG_LIBOBJ_DIR([portable])
+
+# Additional Autoconf macros are in ./m4.
 AC_CONFIG_MACRO_DIR([m4])
 
 
@@ -80,16 +93,27 @@ AC_CONFIG_MACRO_DIR([m4])
 # Initialize Automake.
 # See <http://www.gnu.org/software/automake/manual/automake.html#Options> for details on
 # what the various settings do.
-AM_INIT_AUTOMAKE([std-options
+AM_INIT_AUTOMAKE([1.11.1
+	check-news
+    silent-rules
 	subdir-objects
-    color-tests
     tar-pax
     dist-bzip2
+    color-tests
     parallel-tests
-    1.11.1
+    std-options
     -Wall
     -Werror
 ])
+
+# Get canonical Build and Host system types.
+# This is mainly for issue reports.
+AC_CANONICAL_BUILD
+AC_CANONICAL_HOST
+# Put the triples we found in config.h as #define'd string literals.
+AC_DEFINE_UNQUOTED([SYSTEM_TRIPLE_BUILD],["$build"],[Define to the build triple.])
+AC_DEFINE_UNQUOTED([SYSTEM_TRIPLE_HOST],["$host"],[Define to the host triple.])
+
 
 # Programs and scripts to exempt from the "installcheck" rule introduced by "std-options".
 # List programs and scripts which don't support --help or --version here.
@@ -103,7 +127,8 @@ AM_INIT_AUTOMAKE([std-options
 
 # Set up the maintainer compiler flags.
 # Increase the default GCC warning level.
-AC_SUBST([AM_CPPFLAGS], ["-Wall -Wextra"])
+# For Boost.Filesystem, set CPP flags to the Version 3 interface and to remove all deprecated interfaces.
+AC_SUBST([AM_CPPFLAGS], ["-Wall -Wextra -DBOOST_FILESYSTEM_NO_DEPRECATED=1 -DBOOST_FILESYSTEM_VERSION=3"])
 # By default, compile C and C++ with the maximum possible debugging info and least optimization for maximum debugability.
 AC_SUBST([AM_CFLAGS], ["-ggdb3 -O0"])
 AC_SUBST([AM_CXXFLAGS], ["-ggdb3 -O0 -Wold-style-cast -fno-pretty-templates"])
@@ -115,26 +140,28 @@ AC_SUBST([AM_CXXFLAGS], ["-ggdb3 -O0 -Wold-style-cast -fno-pretty-templates"])
 : ${CPPFLAGS=""}	# Use an empty default.
 : ${CFLAGS=""}		# Don't default to "-g -O2".
 : ${CXXFLAGS=""}	# Don't default to "-g -O2".
-# Similar thing for LDFLAGS.  This is to get AC_CHECK_LIB to also look in /usr/local/lib for libdparser.a. 
-: ${LDFLAGS="-L/usr/local/lib"}
+
 
 ###
 ### Checks for the programs we need to do a build.
 ###
-# The DParser make_dparser program.
-AX_WITH_PROG([PROG_MAKE_DPARSER_ABSPATH], [make_dparser])
-if test -z "$PROG_MAKE_DPARSER_ABSPATH"; then
-	AC_MSG_ERROR([Cannot find a usable make_dparser.])
-fi 
+
 AC_PROG_CC
 # This is required instead of AC_PROG_CC_C_O by automake's "subdir-objects" option.
 AM_PROG_CC_C_O
 AC_PROG_CXX
-AC_PROG_RANLIB
-AC_PROG_INSTALL
-
-# Some other tools we'll need.
 AC_PROG_SED
+AC_PROG_AWK
+AC_PROG_CPP
+AC_PROG_INSTALL
+AC_PROG_LN_S
+AC_PROG_MAKE_SET
+AC_PROG_MKDIR_P
+# Initialize Libtool.  This looks like it doesn't belong here, but thing go awry if it's moved
+# up by AC_INIT.
+LT_INIT
+# Create a variable for updating the libtool script if it gets out of date.
+AC_SUBST([LIBTOOL_DEPS])
 
 # Look for Doxygen and configure it if it does exist.
 DX_DOXYGEN_FEATURE(ON)
@@ -150,27 +177,62 @@ DX_PS_FEATURE(OFF)
 DX_INIT_DOXYGEN([$PACKAGE_NAME], [src/Doxyfile])
 
 # Check for Graphviz dot at configure-time. 
-AX_WITH_PROG([PROG_DOT_ABSPATH], [dot])
-if test -z "$PROG_DOT_ABSPATH"; then
+AX_WITH_PROG([PROG_ABSPATH_DOT], [dot])
+if test -z "$PROG_ABSPATH_DOT"; then
 	AC_MSG_WARN([Cannot find a usable Graphviz dot program.])
 fi
-# Put whatever we may hav found in config.h.
-AC_DEFINE_UNQUOTED([PROG_DOT_ABSPATH],["$PROG_DOT_ABSPATH"],[Define to the absolute path to the Graphviz dot program.])
+# Put whatever we may have found in config.h.
+AC_DEFINE_UNQUOTED([PROG_ABSPATH_DOT],["$PROG_ABSPATH_DOT"],[Define to the absolute path to the Graphviz dot program.])
 
 
 ###
 ### Checks for libraries
 ###
 
-# Make sure we have the DParser library available.
-AC_CHECK_LIB([dparse], [dparse], [], [AC_MSG_ERROR([DParser runtime library not found.])])
 
-# Make sure we have a usable Boost version.
-AX_BOOST_BASE([1.42.0])
+# The DParser source distribution's tarball.
+# To avoid requiring the user to build and install DParser on their system, we'll take the tarball
+# as a configure parameter and build it with the parameters we need.
+COFLO_ARG_WITH_FILE([FILE_PATH_DPARSER_SOURCE_TARBALL], [dparser-tarball], [dparser 1.26 source distribution tarball])
+AC_MSG_NOTICE([FILE_PATH_DPARSER_SOURCE_TARBALL=$FILE_PATH_DPARSER_SOURCE_TARBALL])
+
+# The Boost source distribution's tarball.
+# If the user doesn't already have a suitable Boost installation, we'll do something similar to what we do
+# for DParser, and build it from the source tarball and link to it statically.
+# The reason here though is more complex:
+#   1. Boost (as of 1.48.0) wants to install into the wrong /lib directory on some systems, notably some x86_64 systems.
+#   2. Neither of the Autoconf macro packages for detecting Boost that I've tried works completely correctly when
+#      more than one Boost installation is on a system, e.g. one in /usr/lib and one in /usr/local/lib. E.g., if an
+#      old copy is in /usr/include & /usr/lib and a suitable copy is in /usr/local/include and /usr/local/lib, both
+#      will by default find the correct paths, but ultimately make the program try to link with the libs in /usr/lib
+#      even though it's correctly using the headers in /usr/local/include.
+COFLO_ARG_WITH_FILE([FILE_PATH_BOOST_SOURCE_TARBALL], [boost-tarball], [boost source distribution tarball],
+	[],[AC_MSG_WARN([No Boost source tarball specified.])])
+
+
+# Make sure we have a Boost version we can use.
+# Use the Autoconf Macro Archive macros.
+AX_BOOST_BASE([1.46.1])
 AX_BOOST_PROGRAM_OPTIONS
 AX_BOOST_REGEX
 AX_BOOST_SYSTEM
 AX_BOOST_FILESYSTEM
+
+# Use the boost.m4 macro.
+#BOOST_REQUIRE([1.46.1])
+# Header-only libs
+#BOOST_FOREACH
+#BOOST_UTILITY
+# Libs requiring linking
+#BOOST_PROGRAM_OPTIONS
+#BOOST_REGEX
+#BOOST_SYSTEM
+#BOOST_FILESYSTEM
+
+
+AC_MSG_NOTICE(["BOOST_LDFLAGS=$BOOST_LDFLAGS"])
+AC_SUBST([BOOST_RPATH], [`echo -n "$BOOST_LDFLAGS" | sed 's/-L//'`])
+AC_MSG_NOTICE(["BOOST_RPATH=$BOOST_RPATH"])
 
 ###
 ### Checks for some library functions we need.
@@ -198,6 +260,7 @@ AM_MISSING_PROG([AUTOM4TE], [autom4te])
 ### Create the Makefiles for the program.
 ###
 AC_CONFIG_FILES([Makefile
+	doc/Makefile
 	src/Makefile
 	src/controlflowgraph/Makefile
 	src/controlflowgraph/analysis/Makefile
@@ -206,6 +269,6 @@ AC_CONFIG_FILES([Makefile
 	src/controlflowgraph/visitors/Makefile
 	src/debug_utils/Makefile
 	src/libexttools/Makefile
-	doc/Makefile])
+	third_party/Makefile])
 AC_OUTPUT
 
